--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,3 @@
 spring.application.name=music-ratings
-
+spring.data.mongodb.uri=mongodb+srv://kevinstill26:${mongodb.password}@kmstill.ym6xy.mongodb.net/kmstill?retryWrites=true&w=majority&appName=kmstill
+spring.data.mongodb.databse=kmstill
