--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,4 @@
+spring.config.import=application-secrets.properties
 spring.application.name=music-ratings
 spring.data.mongodb.uri=mongodb+srv://kevinstill26:${mongodb.password}@kmstill.ym6xy.mongodb.net/kmstill?retryWrites=true&w=majority&appName=kmstill
 spring.data.mongodb.databse=kmstill
